pod-nginx-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 8080
  - name: sidecar
    image: curlimages/curl
    command: ["/bin/sh"]
    args: ["-c","echo Hello from the sidecar container; sleep 300"]
